--- a/index.html
+++ b/index.html
@@ -7,9 +7,21 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     </head>
     <body>
-        <h1>Hello Bootstrap!</h1>
-        <p>Image Below :D </p>
-        <img src="images\Firefox_logo_2017.png" alt="Firefox logo 2017" width="500" height="500">
+        <div class="bg-info-subtle">
+            <h1>Hello Bootstrap!</h1>
+            <p align="center">Happy Sleeping Cats <3 </p>
+            <div class="row">
+                <div class="col-4">
+                    <img src="images\Firefox_logo_2017.png" alt="Firefox logo 2017" width="400" height="400">
+                </div>
+                <div class="col-4">
+                    <img src="images\Firefox_logo_2017.png" alt="Firefox logo 2017" width="400" height="400">
+                </div>
+                <div class="col-4">
+                    <img src="images\Firefox_logo_2017.png" alt="Firefox logo 2017" width="400" height="400">
+                </div>
+            </div>
+        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"></script>
     </body>
 </html>
