add classes for header, footer

--- a/tasks/cat_index.html
+++ b/tasks/cat_index.html
@@ -3,13 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
-        <title>Celeb Cats!</title>
+        <title>Super Cats!</title>
         <link rel="stylesheet" href="/styles/cat_styles.css"> 
     </head>
     <body>
         <div>
-            <h1 align="center">Celeb Cats in Action!</h1>
-            <p align="center"><i>Only problem - They out 'size' each other, hence pics cannot be of same size. Oops!</i></p>
+            <h1 class="header" align="center">Super Cats in Action!</h1>
+            <p class="header" align="center"><i>Only problem - They out 'size' each other, hence cannot be of same size. Oops!</i></p>
             <p class="credits" align="center">
                 Image Credits :
             </br> 
@@ -19,12 +19,15 @@
             </p>
 
             <ul>
-                <li><img src="/images/cats/waltz-cat.jpg" alt="waltz-cat" width="400" height="500"> <b>Beethoven Cat :</b> "Bonjour! where is my Waltz partner ?"</li>
-                <li><img src="/images/cats/flying-kick-cat.jpg" alt="flying-kick-cat" width="500" height="400"> <b>KickAss Cat :</b> "Let's trim grass with my flash kicks!"</li>
-                <li><img src="/images/cats/dancing-kittens.jpg" alt="dancing-kittens" width="600" height="400"> <b>Jackson Cats : </b>"It's a dance-off! Step it Up!"</li>
-                <li><img src="/images/cats/ninja-pose-cat.jpg" alt="ninja-pose-cat" width="600" height="500"> <b>Captain Cat :</b> "I could do this all day!"</li>
+                <li><img src="/images/cats/waltz-cat.jpg" alt="waltz-cat"> <b>Beethoven Cat :</b> "Bonjour! where is my Waltz partner ?"</li>
+                <li><img src="/images/cats/flying-kick-cat.jpg" alt="flying-kick-cat"> <b>KickAss Cat :</b> "Let's trim grass with my flash kicks!"</li>
+                <li><img src="/images/cats/dancing-kittens.jpg" alt="dancing-kittens"> <b>Jackson Cats : </b>"Let's nail the Moonwalk, y'all!"</li>
+                <li><img src="/images/cats/ninja-pose-cat.jpg" alt="ninja-pose-cat"> <b>Captain Cat :</b> "I could do this all day!"</li>
             </ul>
         </div>
     </br>
+    <div class="footer">
+        <p>From far far away galaxy...we are watching...Always!</br> When the time is right, we shall return!</p>
+    </div>
     </body>
 </html>
