--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     </head>
     <body>
+        <!--image grid using Bootstrap-->
         <div class="bg-info-subtle">
             <h1>Hello Bootstrap!</h1>
             <p align="center">Happy Sleeping Cats <3 </p>
