add button element

--- a/tasks/cat_index.html
+++ b/tasks/cat_index.html
@@ -17,7 +17,6 @@
             </br>
                 Background Image : <a title="..same as above" href="https://wallpaperaccess.com/galaxy-stars">Galaxy Stars</a>
             </p>
-
             <ul>
                 <li><img src="/images/cats/waltz-cat.jpg" alt="waltz-cat"> <b>Beethoven Cat :</b> "Bonjour! where is my Waltz partner ?"</li>
                 <li><img src="/images/cats/flying-kick-cat.jpg" alt="flying-kick-cat"> <b>KickAss Cat :</b> "Let's trim grass with my flash kicks!"</li>
@@ -29,7 +28,8 @@
     <div class="footer">
         <p><i>"From far far away galaxy...We are watching...Always!</br> In the time of need, We shall Return!"</i></p>
         <p>- The Super Cats</p>
+        <button align="right"><b> Change Cat Disciple </b></button>
     </div>
-    <script src="/scripts/main.js"></script>
+    <script src="/scripts/cat_main.js"></script>
     </body>
 </html>
