remove non functional html

--- a/tasks/cat_index.html
+++ b/tasks/cat_index.html
@@ -28,7 +28,7 @@
     <div class="footer">
         <p><i>"From far far away galaxy...We are watching...Always!</br> In the time of need, We shall Return!"</i></p>
         <p>- The Super Cats</p>
-        <button align="right"><b> Change Cat Disciple </b></button>
+        <button><b> Change Cat Disciple </b></button>
     </div>
     <script src="/scripts/cat_main.js"></script>
     </body>
