--- a/tasks/cat_index.html
+++ b/tasks/cat_index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div>
-            <h1 class="header" align="center">Super Cats in Action!</h1>
+            <h1 align="center">Super Cats in Action!</h1>
             <p class="header" align="center"><i>"Only problem - We are smarter than you Hoomans!. Oops! Hehee..."</i></p>
             <p class="credits" align="center" title="I do not own them. Ready to give due credit where needed.">
                 Image Credits :
@@ -30,8 +30,8 @@
         <p>- The Super Cats</p>
         <button><b> Change Cat Disciple </b></button>
         <pre class="footnote">
-            Created by :
-            Humble Cat Slave, <a href="https://github.com/prak112">Prakirth</a>
+                <b>Created by</b>
+            <i>Humble Cat Slave, <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a></i>
         </pre>
     </div>
     <script src="/scripts/cat_main.js"></script>
