adjust script ref path

--- a/cats_site/index.html
+++ b/cats_site/index.html
@@ -34,6 +34,6 @@
             <i>Humble Cat Slave, <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a></i>
         </pre>
     </div>
-    <script src="/scripts/cat_main.js"></script>
+    <script src="/cats_site/scripts/main.js"></script>
     </body>
 </html>
