revert README filepaths, unconfigure Jekyll on gh-page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
         <title>Super Cats!</title>
-        <link rel="stylesheet" href="/DevSchool-HTML/styles/styles.css"> 
+        <link rel="stylesheet" href="/styles/styles.css"> 
     </head>
     <body>
         <div>
@@ -34,6 +34,6 @@
             <i>Humble Cat Slave, <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a></i>
         </pre>
     </div>
-    <script src="/DevSchool-HTML/scripts/main.js"></script>
+    <script src="/scripts/main.js"></script>
     </body>
 </html>
