--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width initial-scale=1">
         <title>Super Cats!</title>
-        <link rel="stylesheet" href="/../../styles/styles.css"> 
+        <link rel="stylesheet" href="styles/styles.css"> 
     </head>
     <body>
         <div>
@@ -18,10 +18,10 @@
                 Background Image : <a title="..same as above" href="https://wallpaperaccess.com/galaxy-stars">Galaxy Stars</a>
             </p>
             <ul>
-                <li><img src="/../../images/cats/waltz-cat.jpg" alt="waltz-cat"> <b>Beethoven Cat :</b> "Bonjour! where is my Waltz partner ?"</li>
-                <li><img src="/../../images/cats/flying-kick-cat.jpg" alt="flying-kick-cat"> <b>KickAss Cat :</b> "Let's trim grass with my flash kicks!"</li>
-                <li><img src="/../../images/cats/dancing-kittens.jpg" alt="dancing-kittens"> <b>Jackson Cats : </b>"Let's nail the Moonwalk, y'all!"</li>
-                <li><img src="/../../images/cats/ninja-pose-cat.jpg" alt="ninja-pose-cat"> <b>Captain Cat :</b> "I could do this all day!"</li>
+                <li><img src="images/cats/waltz-cat.jpg" alt="waltz-cat"> <b>Beethoven Cat :</b> "Bonjour! where is my Waltz partner ?"</li>
+                <li><img src="images/cats/flying-kick-cat.jpg" alt="flying-kick-cat"> <b>KickAss Cat :</b> "Let's trim grass with my flash kicks!"</li>
+                <li><img src="images/cats/dancing-kittens.jpg" alt="dancing-kittens"> <b>Jackson Cats : </b>"Let's nail the Moonwalk, y'all!"</li>
+                <li><img src="images/cats/ninja-pose-cat.jpg" alt="ninja-pose-cat"> <b>Captain Cat :</b> "I could do this all day!"</li>
             </ul>
         </div>
     </br>
@@ -34,6 +34,6 @@
             <i>Humble Cat Slave, <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a></i>
         </pre>
     </div>
-    <script src="/../../scripts/main.js"></script>
+    <script src="scripts/main.js"></script>
     </body>
 </html>
