add navigation between pages

--- a/navigation-menu/index.html
+++ b/navigation-menu/index.html
@@ -6,11 +6,15 @@
         <title>Home</title>
     </head>
     <body>
-        <!--- navigation menu goes here -->
-
         <h1>Homepage</h1>
         <p>Welcome to my Developer Journey!</p>
-
+        <div class="container">
+            <ul class="links">
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="learnings.html">Learning Plans</a></li>
+                <li><a href="social.html">Social Activity</a></li>
+            </ul>
+        </div>
 
     </body>
 </html>
