--- a/navigation-menu/learnings.html
+++ b/navigation-menu/learnings.html
@@ -6,11 +6,16 @@
         <title>FuturePlans</title>
     </head>
     <body>
-        <!-- navigation menu goes here -->
-        
         <h1>Learning Plans</h1>
         <p>Learning makes everyone an awesome Developer!</p>
 
-
+        <div class="container">
+            <p class="return-home">To other locations : </p>
+            <ul class="links">
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="social.html">Social Activity</a></li>
+                <li><a href="index.html">Back To Main Page</a></li>
+            </ul>
+        </div>
     </body>
 </html>
