--- a/navigation-menu/projects.html
+++ b/navigation-menu/projects.html
@@ -6,15 +6,22 @@
         <title>Projects</title>
     </head>
     <body>
-        <!--- navigation menu goes here -->
-
         <h1>Projects</h1>
         <p>Projects which make this journey more enjoyable are: </p>
         <ul>
             <li><a href="">Tournament Tracker</a></li>
             <li><a href="">HSL City Bikes Restful API</a></li>
+            <li><a href="">Sakky Course Project</a></li>
         </ul>
 
+        <div class="container">
+            <p class="return-home">To other locations : </p>
+            <ul class="links">
+                <li><a href="learnings.html">Learning Plan</a></li>
+                <li><a href="social.html">Social Activity</a></li>
+                <li><a href="index.html">Back To Main Page</a></li>
+            </ul>
+        </div>
 
     </body>
 </html>
