--- a/navigation-menu/social.html
+++ b/navigation-menu/social.html
@@ -6,8 +6,6 @@
         <title>Socials</title>
     </head>
     <body>
-        <!--- navigation menu goes here -->
-
         <h1>Social Media</h1>
         <p>Journey without some social fun, is no fun!</p>
         <ul>
@@ -15,6 +13,14 @@
             <li><a href="">GitHub</a></li>
         </ul>
 
+        <div class="container">
+            <p class="return-home">To other locations : </p>
+            <ul class="links">
+                <li><a href="learnings.html">Learning Plan</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">Back To Main Page</a></li>
+            </ul>
+        </div>
 
     </body>
 </html>
