add styles to nav-menu

--- a/navigation-menu/index.html
+++ b/navigation-menu/index.html
@@ -4,16 +4,24 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Home</title>
+        <link rel="stylesheet" href="../styles/styles.css"/>
     </head>
     <body>
         <h1>Homepage</h1>
         <p>Welcome to my Developer Journey!</p>
         <div class="container">
-            <ul class="links">
+            <ul class="navigation-menu">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="learnings.html">Learning Plans</a></li>
                 <li><a href="social.html">Social Activity</a></li>
             </ul>
+
+            <h2>About Me</h2>
+        <pre>
+            My name is Prakirth Govardhanam, 
+            I am a Web Developer in training. 
+            I am sometimes super-coder, sometimes super-procrastinator!.
+        </pre>
         </div>
 
     </body>
