--- a/navigation-menu/learnings.html
+++ b/navigation-menu/learnings.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>FuturePlans</title>
+        <link rel="stylesheet" href="../styles/styles.css"/>
     </head>
     <body>
         <h1>Learning Plans</h1>
         <p>Learning makes everyone an awesome Developer!</p>
 
         <div class="container">
-            <p class="return-home">To other locations : </p>
+            <p class="navigation-menu">To other locations : </p>
             <ul class="links">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="social.html">Social Activity</a></li>
