--- a/navigation-menu/projects.html
+++ b/navigation-menu/projects.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Projects</title>
+        <link rel="stylesheet" href="../styles/styles.css"/>
     </head>
     <body>
         <h1>Projects</h1>
@@ -15,7 +16,7 @@
         </ul>
 
         <div class="container">
-            <p class="return-home">To other locations : </p>
+            <p class="navigation-menu">To other locations : </p>
             <ul class="links">
                 <li><a href="learnings.html">Learning Plan</a></li>
                 <li><a href="social.html">Social Activity</a></li>
