--- a/navigation-menu/social.html
+++ b/navigation-menu/social.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <title>Socials</title>
+        <link rel="stylesheet" href="../styles/styles.css"/>
     </head>
     <body>
         <h1>Social Media</h1>
@@ -14,7 +15,7 @@
         </ul>
 
         <div class="container">
-            <p class="return-home">To other locations : </p>
+            <p class="navigation-menu">To other locations : </p>
             <ul class="links">
                 <li><a href="learnings.html">Learning Plan</a></li>
                 <li><a href="projects.html">Projects</a></li>
