add styling and image

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyGoogle</title>
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <form action="https://www.google.com/">
@@ -14,18 +15,26 @@
             </center>
         </div>
     </br>
+    <div class="search-bar">
         <center>
             <input type="text" name="q" placeholder="Search for something">
             <input type="submit" href="https://www.google.com/">
             <button type="submit" href="https://www.google.com/">I'm Feeling Lucky</button>
         </center>
+    </div>
     </br>
         <div class="language-selector" align="center">
-            <i>MyGoogle</i> offered in :
-            <a href="https://www.google.com/">English</a>
-            <a href="https://www.google.com/">हिन्दी</a>
-            <a href="https://www.google.com/">తెలుగు</a>
+            <i>MyGoogle</i> offered in :&nbsp;&nbsp;
+            <a href="https://www.google.com/">English</a>&nbsp;
+            <a href="https://www.google.com/">हिन्दी</a>&nbsp;
+            <a href="https://www.google.com/">తెలుగు</a>&nbsp;
         </div>
     </form>
+    <div class="footer">
+        <pre>
+            Image Credits :<a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph">Image by vecstock</a> on Freepik
+            Created by <a href="https://github.com/prak112">Prakirth</a>, August 2023.
+        </pre>
+    </div>
 </body>
 </html>
