add image and animation

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <form action="https://www.google.com/">
-        <div class="container">
+        <div class="image-container">
             <center>
                 <img align="center" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" alt="Google">
             </center>
         </div>
     </br>
-    <div class="search-bar">
+    <div class="search-area">
         <center>
-            <input type="text" name="q" placeholder="Search for something">
+            <input class="search-bar" type="text" name="q" placeholder="Search for something">
             <input type="submit" href="https://www.google.com/">
             <button type="submit" href="https://www.google.com/">I'm Feeling Lucky</button>
         </center>
@@ -30,10 +30,11 @@
             <a href="https://www.google.com/">తెలుగు</a>&nbsp;
         </div>
     </form>
+</br>
     <div class="footer">
         <pre>
-            Image Credits :<a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph">Image by vecstock</a> on Freepik
-            Created by <a href="https://github.com/prak112">Prakirth</a>, August 2023.
+            Image Credits: <a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph">Image by vecstock</a> on Freepik
+            Created by  <a href="https://github.com/prak112">Prakirth</a>, August 2023
         </pre>
     </div>
 </body>
