add search bar and button styles

--- a/index.html
+++ b/index.html
@@ -17,25 +17,27 @@
     </br>
     <div class="search-area">
         <center>
-            <input class="search-bar" type="text" name="q" placeholder="Search for something">
-            <input type="submit" href="https://www.google.com/">
-            <button type="submit" href="https://www.google.com/">I'm Feeling Lucky</button>
+            <input class="search-bar" type="text" name="q" placeholder="Search for something...">
+            <input class="search-button" type="submit" value="Fetch that something" href="https://www.google.com/" target="_blank" rel="noopener">
+            <button class="search-button" type="submit" href="https://www.google.com/" target="_blank" rel="noopener">Feeling Crazy!</button>
         </center>
     </div>
     </br>
         <div class="language-selector" align="center">
             <i>MyGoogle</i> offered in :&nbsp;&nbsp;
-            <a href="https://www.google.com/">English</a>&nbsp;
-            <a href="https://www.google.com/">हिन्दी</a>&nbsp;
-            <a href="https://www.google.com/">తెలుగు</a>&nbsp;
+            <a href="https://www.google.com/" target="_blank" rel="noopener">English</a>&nbsp;
+            <a href="https://www.google.com/" target="_blank" rel="noopener">हिन्दी</a>&nbsp;
+            <a href="https://www.google.com/" target="_blank" rel="noopener">తెలుగు</a>&nbsp;
         </div>
     </form>
 </br>
+<aside>
     <div class="footer">
         <pre>
-            Image Credits: <a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph">Image by vecstock</a> on Freepik
-            Created by  <a href="https://github.com/prak112">Prakirth</a>, August 2023
+            Image Credits: <a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph" target="_blank" rel="noopener">Image by vecstock</a> on Freepik
+            Created by  <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a>, August 2023
         </pre>
     </div>
+</aside>
 </body>
 </html>
