move footer to header, add googlefont

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <aside>
+        <div class="header">
+            <pre>
+                Image Credits: <a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph" target="_blank" rel="noopener">Image by vecstock</a> on Freepik
+                Created by  <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a>, August 2023
+            </pre>
+        </div>
+    </aside>
     <form action="https://www.google.com/">
         <div class="image-container">
             <center>
@@ -24,20 +32,12 @@
     </div>
     </br>
         <div class="language-selector" align="center">
-            <i>MyGoogle</i> offered in :&nbsp;&nbsp;
+            <b>MyGoogle</b> offered in :&nbsp;&nbsp;
             <a href="https://www.google.com/" target="_blank" rel="noopener">English</a>&nbsp;
             <a href="https://www.google.com/" target="_blank" rel="noopener">हिन्दी</a>&nbsp;
             <a href="https://www.google.com/" target="_blank" rel="noopener">తెలుగు</a>&nbsp;
         </div>
     </form>
-</br>
-<aside>
-    <div class="footer">
-        <pre>
-            Image Credits: <a href="https://www.freepik.com/free-photo/glowing-spaceship-orbits-planet-starry-galaxy-generated-by-ai_40968198.htm#query=universe&position=3&from_view=keyword&track=sph" target="_blank" rel="noopener">Image by vecstock</a> on Freepik
-            Created by  <a href="https://github.com/prak112" target="_blank" rel="noopener">Prakirth</a>, August 2023
-        </pre>
-    </div>
-</aside>
+
 </body>
 </html>
