homepage images and fonts

--- a/navigation-menu/index.html
+++ b/navigation-menu/index.html
@@ -8,21 +8,32 @@
     </head>
     <body>
         <h1>Homepage</h1>
-        <p>Welcome to my Developer Journey!</p>
+        <p><b>Welcome to my Developer Journey!</b></p>
         <div class="container">
             <ul class="navigation-menu">
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="learnings.html">Learning Plans</a></li>
                 <li><a href="social.html">Social Activity</a></li>
-            </ul>
-
-            <h2>About Me</h2>
-        <pre>
-            My name is Prakirth Govardhanam, 
-            I am a Web Developer in training. 
-            I am sometimes super-coder, sometimes super-procrastinator!.
+            </ul>     
+        <p>I wish this was Me!</p>
+        <pre text-align="left">
+    My name is Prakirth Govardhanam, and I am a Software Developer in training. 
+    Currently learning Backend technologies (C#, Python, PHP) 
+    and Frontend technologies (HTML, CSS, JS). 
+    Focused on building a Developer career with ASP.NET (C#) and Django stacks. 
+    Eager to become a Serverless Developer. 
+    Interested in Analytics, Circular Economy & Sustainable Finance.
+    
+    Nitty-Gritties : 
+    I am sometimes super-coder, sometimes super-procrastinator!.
+        </pre>
+        <pre class="credits" align="right">
+    Image Credits : 
+        <b>Cat</b> 
+    <i>Suridu</i>, my great benevloent cat
+        <b>Background</b> 
+    <a href="https://www.freepik.com/free-photo/aesthetic-dark-wallpaper-background-neon-light_17581562.htm#query=galaxy&position=14&from_view=keyword&track=sph">Image by rawpixel.com</a>, on Freepik 
         </pre>
         </div>
-
     </body>
 </html>
