--- a/navigation-menu/responsive-images.html
+++ b/navigation-menu/responsive-images.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <div>
-        <p><a href="../index.html">Back To Basics</a></p>
+    <div class="container">
+        <p>
+            <ul>
+                <li><a href="../index.html">Back To Basics</a></li>
+                <li><a href="vector-graphics.html">Vector Graphics</a></li>
+                <li><a href="other-embeds.html">Other Embedding Technologies</a></li>
+            </ul>
+        </p>
     </div>
 </body>
 </html>
