--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1 align="center">How To embed Multimedia Content in a HTML page ?</h1>
+    <h1>How To embed Multimedia Content in a HTML page ?</h1>
 
     <!--Add navigation menu HERE! ..other topics to embed multimedia content-->
     <div class="navigation-menu">
@@ -19,7 +19,7 @@
         </ul>
     </div>
 
-    <h2 align="center">Embedding Images, Video and Subtitles</h2>
+    <h2>Embedding Images, Video and Subtitles</h2>
 
     <div class="grid-container">
         <div class="media-column">
