--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             - Coincidentally, it is the same procedure for audio clips as well.
         </pre>
         </div>
+        <a href="#" class="back-to-top">Back to Top</a>
     </div>
 </body>
 </html>
