--- a/navigation-menu/vector-graphics.html
+++ b/navigation-menu/vector-graphics.html
@@ -50,8 +50,11 @@
             </ul>
         </p>
     </div>
+</br>
     <div class="grid-container">
         <div class="media-column">
+            <cite>Source : <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Adding_vector_graphics_to_the_Web#active_learning_playing_with_svg">MDN Web Docs</a></cite>
+
             <svg width="150%" height="125%">
                 <rect width="100%" height="100%" fill="red"/>
                 <circle  cx="100%" cy="100%" r="50%" fill="blue" stroke="black"/>
@@ -68,6 +71,6 @@
                 <code>&lt;polygon&gt;</code> and <code>&lt;text&gt;</code>.
             </pre>
         </div>
-    </div>
+        </div>
 </body>
 </html>
