--- a/index.html
+++ b/index.html
@@ -50,32 +50,36 @@
         </div>
 
         <div class="text-column">
-        <pre>
+        <p>
             In my view, this is the best illustration of a T-Rex relatable to the current world.
             Also helps in viewing and understanding the T-Rex not out of fear but out of curiosity.
             Even cartoons with such wonderful illustrations would make children curious about the T-Rex.
-
+            <hr>
             Coming to "How to set this up" is as follows :
-            - Create an index.html file and code with guidance from <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Images_in_HTML" target="_blank" rel="noopener">MDN Web Docs</a>
-            - Find an image of your interest from <a href="https://www.freepik.com/" target="_blank" rel="noopener">Freepik</a> 
-            - Add image to index.html (FreePik is an open source library)
-            - Create a styles.css file to set colors, any text (like this)
-            - Run it on a local server or just open with Chrome/Edge.
-        </pre>
+            <ul>
+                <li>Create an index.html file and code with guidance from <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Images_in_HTML" target="_blank" rel="noopener">MDN Web Docs</a>
+                <li>Find an image of your interest from <a href="https://www.freepik.com/" target="_blank" rel="noopener">Freepik</a></li>
+                <li>Add image to index.html (FreePik is an open source library)</li>
+                <li>Create a styles.css file to set colors, any text (like this)</li>
+                <li>Run it on a local server or just open with Chrome/Edge.</li>
+            </ul>
+        </p>
         </div>
         <div class="text-column">
-        <pre>
-            This is a simple MP4 video of a cute koala eating leaves from Pexels by Valeriia Miller.
+        <p>
+            This is a simple MP4 video of a cute koala eating leaves from Pexels by Valeriia Miller. 
             The poster image is a koala-generated-by-ai from FreePik by vecstock.
-
+            <hr>
             Coming to "How to set this up" is as follows :
-            - Search for free and permissive videos to host in your page (Found it on <a href="https://www.pexels.com">Pexels</a>)
-            - Add a new <code>&lt;video&gt;</code> element with source and controls
-            - Remember to credit the source and the author, as I did above.
-            - Add a poster image before the video
-            - Voila! The video is hosted on your page!
-            - Coincidentally, it is the same procedure for audio clips as well.
-        </pre>
+            <ul>
+                <li>Search for free and permissive videos to host in your page (Found it on <a href="https://www.pexels.com">Pexels</a>)</li>
+                <li>Add a new <code>&lt;video&gt;</code> element with source and controls</li>
+                <li>Remember to credit the source and the author, as I did above.</li>
+                <li>Add a poster image before the video</li>
+                <li>Voila! The video is hosted on your page!</li>
+                <li>Coincidentally, it is the same procedure for audio clips as well.</li>
+            </ul>
+        </p>
         </div>
         <a href="#" class="back-to-top">Back to Top</a>
     </div>
