initial content and styles

--- a/navigation-menu/responsive-images.html
+++ b/navigation-menu/responsive-images.html
@@ -3,16 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Design</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
-    <div class="container">
+    <h1>Responsive Images</h1>
+    <div class="navigation-menu">
         <p>
             <ul>
                 <li><a href="../index.html">Back To Basics</a></li>
                 <li><a href="vector-graphics.html">Vector Graphics</a></li>
                 <li><a href="other-embeds.html">Other Embedding Technologies</a></li>
+            </ul>
+        </p>
+    </div>
+    </br>
+    <div class="container">
+        <p>Issues which provided the neccessity for Responsive Design or in our case, Responsive Images :
+            <ul>
+                <li><b>Art Direction Problem</b> - Rendering images specific for browser/device size</li>
+                <li><b>Resolution Switching Problem</b> - Same images to be displayed in differing number of pixels based on browser/device size</li>
+
             </ul>
         </p>
     </div>
