update nav menu

--- a/navigation-menu/other-embeds.html
+++ b/navigation-menu/other-embeds.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Iframe Embedding</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <h1>Other Embedding Technologies</h1>
-    <div class="container">
+    <div class="navigation-menu">
         <p>
             <ul>
                 <li><a href="../index.html">Back To Basics</a></li>
@@ -16,7 +16,10 @@
                 <li><a href="responsive-images.html">Responsive Images</a></li>
             </ul>
         </p>
+    </div>
+</br>
 
+    <div class="container">
         <p>Different types of embedding elements include :
             <ul>
                 <li><code>&lt;iframe&gt;</code> - Embeds an external web page</li> 
