--- a/navigation-menu/vector-graphics.html
+++ b/navigation-menu/vector-graphics.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SVG Images</title>
     <link rel="stylesheet" href="../styles/styles.css">
 </head>
 <body>
     <h1>Vector Graphics</h1>
-    <div class="container">
+    <div class="navigation-menu">
         <p>
             <ul>
                 <li><a href="../index.html">Back To Basics</a></li>
@@ -16,7 +16,9 @@
                 <li><a href="other-embeds.html">Other Embedding Technologies</a></li>
             </ul>
         </p>
-
+    </div>
+</br>
+    <div class="container">
         <p>Vector Graphics are used to create images and illustrations. Images can be rendered in 2 ways :
             <ul>
                 <li>Vector Images - SVG (Scalable Vector Graphics) </li>
