format content and media width

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img
                 src="images/fun-trex.jpg"
                 alt="3D illustratuion of a T-Rex riding a scooter in suit"
-                width="500"
+                width="550"
                 height="700"
                 title = "An excited T-Rex businessman riding a scooter"
             />
@@ -53,9 +53,8 @@
         <p>
             In my view, this is the best illustration of a T-Rex relatable to the current world.
             Also helps in viewing and understanding the T-Rex not out of fear but out of curiosity.
-            Even cartoons with such wonderful illustrations would make children curious about the T-Rex.
             <hr>
-            Coming to "How to set this up" is as follows :
+            Set up is as follows :
             <ul>
                 <li>Create an index.html file and code with guidance from <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Multimedia_and_embedding/Images_in_HTML" target="_blank" rel="noopener">MDN Web Docs</a>
                 <li>Find an image of your interest from <a href="https://www.freepik.com/" target="_blank" rel="noopener">Freepik</a></li>
@@ -70,7 +69,7 @@
             This is a simple MP4 video of a cute koala eating leaves from Pexels by Valeriia Miller. 
             The poster image is a koala-generated-by-ai from FreePik by vecstock.
             <hr>
-            Coming to "How to set this up" is as follows :
+            Set up is as follows :
             <ul>
                 <li>Search for free and permissive videos to host in your page (Found it on <a href="https://www.pexels.com">Pexels</a>)</li>
                 <li>Add a new <code>&lt;video&gt;</code> element with source and controls</li>
