add favicon and header logo

--- a/index.html
+++ b/index.html
@@ -6,11 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Multimedia Content</title>
     <link rel="stylesheet" href="styles/styles.css">
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 <body>
+    <header align="right">
+        <img src="images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
+        <cite>Credits : <a href="https://commons.wikimedia.org/wiki/File:Firefox_Nightly_logo,_2019.svg">Mozilla Corporation</a>, <a href="https://www.mozilla.org/en-US/MPL/2.0/">MPL 2</a>, via Wikimedia Commons</cite>
+    </header>
     <h1>How To embed Multimedia Content in a HTML page ?</h1>
 
-    <!--Add navigation menu HERE! ..other topics to embed multimedia content-->
     <div class="navigation-menu">
         <ul>
             <li><a href="navigation-menu/other-embeds.html">Other Embedding Technologies</a></li>
