--- a/navigation-menu/vector-graphics.html
+++ b/navigation-menu/vector-graphics.html
@@ -5,8 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Images</title>
     <link rel="stylesheet" href="../styles/styles.css">
+    <!--favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon_io/site.webmanifest">
 </head>
 <body>
+    <header align="right">
+        <img src="../images/firefox-nightly-logo2019.svg" width="45" alt="Firefox_Nightly_logo" title = "firefox nightly logo"/>
+    </header>
     <h1>Vector Graphics</h1>
     <div class="navigation-menu">
         <p>
